<resources>
    <string name="app_name">adworkshop</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="status">Status</string>
    <string name="sales_person">Salesperson</string>
    <string name="email_address">Email Address</string>
    <string name="passsword">Password</string>
    <string name="add_client">Add Client</string>
    <string name="client_list">Clients</string>
    <string name="back">Back</string>
    <string name="our_projects">Our Projects</string>
    <string name="add">Add</string>
    <string name="add_project">Add Project</string>
    <string name="project_list">"Projects "</string>
    <string name="our_clients">Our Clients</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="err_blank_full_name">Full Name should not be blank</string>
    <string name="err_email_blank">Email should not be blank</string>
    <string name="err_valid_email">Enter valid Email</string>
    <string name="err_mobile_blank">Phone Number should not be blank</string>
    <string name="err_password">Password should not be blank</string>
    <string name="went_wrong">Somthing went wrong</string>
    <string name="client_name">Client Name</string>
    <string name="client_type">Client Type</string>
    <string name="company_code">Company Code</string>
    <string name="login">SignIn</string>
    <string name="edit">Edit</string>
    <string name="err_client_name_blank">Client Name should not be blank</string>
    <string name="err_client_type_blank">Client type should not be blank</string>
    <string name="err_company_code">Company Code should not be blank</string>
    <string name="edit_client_info">Edit Client Info</string>
</resources>